--- a/colabmergingv2.ipynb
+++ b/colabmergingv2.ipynb
@@ -131,7 +131,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Option 1: Upload 23andMe Raw Data (If you have AncestryDNA Raw Data, skip to Option 2)\n",
+        "# @title Upload 23andMe Raw Data\n",
         "from google.colab import files\n",
         "\n",
         "uploaded = files.upload()\n",
